# assert_eq_all

./: Cargo.toml  README.md
examples/example/: Cargo.toml  main.rs
src/: lib.rs
